# soniq.io

./: .gitignore  LICENSE  README.md
include/inf/: adc.hpp  app.hpp  canvas.hpp  config.hpp  device.hpp  ethernet.hpp  i2c.hpp  irq.hpp  pin.hpp  pin_x.hpp  ssd1306.hpp  support.hpp  timer.hpp
include/inf/detail/: adc_impl.hpp  adc_impl_f4.hpp  adc_impl_h7.hpp  app_impl.hpp  i2c_impl.hpp  irq_impl.hpp  pin_impl.hpp  pin_impl_h7.hpp  timer_impl.hpp
include/soniq/: adc.hpp  app.hpp  config.hpp  device.hpp  ethernet.hpp  i2c.hpp  irq.hpp  pin.hpp  pin_x.hpp  ssd1306.hpp  support.hpp  thread.hpp  timer.hpp
include/soniq/detail/: adc_impl_f4.hpp  adc_impl_h7.hpp  i2c_impl.hpp  irq_impl.hpp  timer_impl.hpp
src/inf/: adc_f4.cpp  adc_h7.cpp  canvas.cpp  ethernet.cpp  exti.cpp  i2c.cpp  lwip.c  thread.cpp
src/soniq/: exti.cpp  thread.cpp  timer.cpp
stm32f446/: .cproject  .mxproject  .project  CMakeLists.txt
stm32f446/Inc/: stm32f4xx_hal_conf.h
stm32f446/Src/: init.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32h7/: .cproject  .mxproject  .project  CMakeLists.txt  STM32H743ZITx_FLASH.ld
stm32h7/Inc/: ethernetif.h  lwipopts.h  stm32h7xx_hal_conf.h  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.h
stm32h7/Src/: core.c  ethernetif.c  freertos.c  init.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
stm32h7/startup/: startup_stm32h743xx.s
tests/: adc_test1.cpp  blinky.cpp  button_interrupt_test.cpp  button_test.cpp  ssd1306_test.cpp  thread_test.cpp  timer_interrupt.cpp  udp_echo.cpp  udp_echo_test.cpp
